added warranty field error

--- a/Inventory/Ticketing/templates/Ticketing/base.html
+++ b/Inventory/Ticketing/templates/Ticketing/base.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 <!DOCTYPE html>
-<html lang="en" dir="ltr" style="height:100%; width:100%; background-image: url('/static/img/apple-blur-connection-1350461.jpg'); background-size: cover;">
+<html lang="en" dir="ltr" ">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "fontawesome-free-5.8.1-web/css/all.min.css" %}">
 
   </head>
-  <body style='background:none;'>
+  <body>
 
     {% block content %}
     {% endblock %}
