--- a/Inventory/Ticketing/static/css/main.css
+++ b/Inventory/Ticketing/static/css/main.css
@@ -1,13 +1,16 @@
+body {
+  background-attachment: fixed;
+  height:100%;
+  width:100%;
+  background-image: url('/static/img/apple-blur-connection-1350461.jpg')
+  }
+
 .jumbotron {
   background: rgba(233,236,239, 0.7);
   padding-bottom: 2%;
   margin-top: 50px;
   min-width: 800px;
 }
-
-#jumbolinks {
-}
-
 
 #createform {
   display: none;
@@ -74,7 +77,19 @@
   height: 50px;
   overflow: hidden;
   padding-top: 5px;
+}
 
+#tableerror {
+  background: rgba(203, 46, 46, 0.8);
+  border-radius:5px;
+  text-align: center;
+  line-height: 25px;
+  height: 25px;
+  color:white;
+  width: 30%;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 #tablerow p {
   line-height: 1.5;
