--- a/Inventory/Ticketing/templates/Ticketing/ticket_detail.html
+++ b/Inventory/Ticketing/templates/Ticketing/ticket_detail.html
@@ -243,7 +243,7 @@
   {% block js  %}
   <script>
   $(function () {
-    $("#id_mb_war").datepicker({
+    $("#id_mb_war,#id_pr_war,#id_mm_war").datepicker({
       format:'mm/dd/yy',
     });
   });
